--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ matplotlib-inline==0.1.6
 missingno==0.5.2
 nest-asyncio==1.5.8
 numpy==1.26.1
+numpy-financial==1.0.0
 packaging==23.1
 pandas==2.1.2
 parso==0.8.3
@@ -45,7 +46,7 @@ pyzmq==25.1.1
 scipy==1.11.3
 seaborn==0.13.0
 six==1.16.0
-SQLAlchemy==2.0.22
+SQLAlchemy==2.0.23
 stack-data==0.6.2
 statsmodels==0.14.0
 tenacity==8.2.3
